# interbotix_ros_rovers

./: CITATION.cff  README.md
interbotix_ros_xslocobots/examples/interbotix_ros_xslocobots_examples/: CMakeLists.txt  README.md  package.xml
interbotix_ros_xslocobots/examples/interbotix_xslocobot_joy/: CMakeLists.txt  README.md  package.xml
interbotix_ros_xslocobots/examples/interbotix_xslocobot_joy/config/: modes_all.yaml  modes_base.yaml
interbotix_ros_xslocobots/examples/interbotix_xslocobot_joy/launch/: xslocobot_joy.launch  xslocobot_joy.launch.py
interbotix_ros_xslocobots/examples/interbotix_xslocobot_joy/msg/: LocobotJoy.msg
interbotix_ros_xslocobots/examples/interbotix_xslocobot_joy/scripts/: xslocobot_robot  xslocobot_robot.py
interbotix_ros_xslocobots/examples/interbotix_xslocobot_joy/src/: xslocobot_joy.cpp
interbotix_ros_xslocobots/examples/interbotix_xslocobot_landmark_nav/: CMakeLists.txt  README.md  package.xml  setup.py
interbotix_ros_xslocobots/examples/interbotix_xslocobot_landmark_nav/landmarks/: landmarks.yaml
interbotix_ros_xslocobots/examples/interbotix_xslocobot_landmark_nav/launch/: landmark_manager.launch  nav_to_landmark.launch  xslocobot_landmark_nav.launch
interbotix_ros_xslocobots/examples/interbotix_xslocobot_landmark_nav/scripts/: nav_to_landmark
interbotix_ros_xslocobots/interbotix_ros_xslocobots/: CMakeLists.txt  README.md  package.xml
interbotix_ros_xslocobots/interbotix_xslocobot_control/: CMakeLists.txt  README.md  package.xml
interbotix_ros_xslocobots/interbotix_xslocobot_control/config/: bridge.yaml  kobuki_node_params.yaml  locobot_base.yaml  locobot_px100.yaml  locobot_wx200.yaml  locobot_wx250s.yaml  modes_all.yaml  rs_camera.yaml  tf_rebroadcaster.yaml
interbotix_ros_xslocobots/interbotix_xslocobot_control/demos/python_ros2_api/: README.md  bartender.py  combo_control.py  ee_cartesian_trajectory.py  ee_pose_components.py  ee_pose_matrix_control.py  gripper_control.py  joint_position_control.py  joint_pwm_control.py  move_base.py  pan_tilt_control.py
interbotix_ros_xslocobots/interbotix_xslocobot_control/launch/: xslocobot_control.launch  xslocobot_control.launch.py  xslocobot_python.launch
interbotix_ros_xslocobots/interbotix_xslocobot_control/scripts/: startup_bridge.sh  startup_create3_default_params.sh  startup_dynamic_bridge.sh
interbotix_ros_xslocobots/interbotix_xslocobot_descriptions/: CMakeLists.txt  README.md  package.xml
interbotix_ros_xslocobots/interbotix_xslocobot_descriptions/launch/: many_xslocobots.launch  remote_view.launch  remote_view.launch.py  rtabmapviz_remote.launch  xslocobot_description.launch  xslocobot_description.launch.py
interbotix_ros_xslocobots/interbotix_xslocobot_descriptions/meshes/locobot_meshes/: locobot_arm_cradle.stl  locobot_battery.stl  locobot_camera.stl  locobot_camera_tower_large_simple.stl  locobot_camera_tower_small_simple.stl  locobot_lidar.stl  locobot_lidar_tower.stl  locobot_lidar_tower_simple.stl  locobot_pan.stl  locobot_tilt.stl
interbotix_ros_xslocobots/interbotix_xslocobot_descriptions/meshes/locobot_meshes/create3_version/: bump_caster.stl  locobot_arm_stand.stl  locobot_base_plate.stl  locobot_camera_tower_small.stl  locobot_camera_tower_small_simple.stl
interbotix_ros_xslocobots/interbotix_xslocobot_descriptions/meshes/locobot_meshes/kobuki_version/: locobot_base_plate.stl  locobot_camera_tower_large.stl  locobot_camera_tower_small.stl
interbotix_ros_xslocobots/interbotix_xslocobot_descriptions/rviz/: many_locobots.rviz  xslocobot_description.rviz
interbotix_ros_xslocobots/interbotix_xslocobot_descriptions/urdf/: arm_cradle.urdf.xacro  arm_plate.urdf.xacro  battery.urdf.xacro  camera_tower.urdf.xacro  lidar.urdf.xacro  locobot.urdf.xacro  mobile_px100.urdf.xacro  mobile_wx200.urdf.xacro  mobile_wx250s.urdf.xacro  pan_and_tilt.urdf.xacro  plate.urdf.xacro  tmp.urdf  wx250s.urdf  wx250s.urdf.xacro
interbotix_ros_xslocobots/interbotix_xslocobot_descriptions/urdf/arms/: ar_tag.urdf.xacro  arm_control.urdf.xacro  mobile_arm.urdf.xacro  mobile_px100.urdf.xacro  mobile_wx200.urdf.xacro  mobile_wx250s.urdf.xacro
interbotix_ros_xslocobots/interbotix_xslocobot_descriptions/urdf/create3/: wheel.urdf.xacro  wheel_drop.urdf.xacro  wheel_with_wheeldrop.urdf.xacro
interbotix_ros_xslocobots/interbotix_xslocobot_descriptions/urdf/create3_version/: README.md  bump_caster.urdf.xacro  bumper.urdf.xacro  button.urdf.xacro  caster.urdf.xacro  common_properties.urdf.xacro  locobot_create3.urdf.xacro  wheel.urdf.xacro  wheel_drop.urdf.xacro  wheel_with_wheeldrop.urdf.xacro
interbotix_ros_xslocobots/interbotix_xslocobot_descriptions/urdf/create3_version/dock/: ir_emitter.urdf.xacro  (+1 more)
interbotix_ros_xslocobots/interbotix_xslocobot_descriptions/urdf/kobuki_version/: locobot_kobuki.urdf.xacro
interbotix_ros_xslocobots/interbotix_xslocobot_nav/: CMakeLists.txt  README.md  package.xml
interbotix_ros_xslocobots/interbotix_xslocobot_nav/config/: common_costmap_params.yaml  global_costmap_all_params.yaml  global_costmap_depth_params.yaml  global_planner_params.yaml  local_costmap_all_params.yaml  local_costmap_depth_params.yaml  local_planner_params.yaml  move_base_params.yaml  nav2_params.yaml  slam_toolbox_localization.yaml  slam_toolbox_online_async.yaml  slam_toolbox_online_sync.yaml  tf_rebroadcaster.yaml
interbotix_ros_xslocobots/interbotix_xslocobot_nav/launch/: xslocobot_nav.launch  xslocobot_nav.launch.py  xslocobot_nav2_bringup.launch.py  xslocobot_nav_sim.launch  xslocobot_rtabmap.launch.py  xslocobot_slam_toolbox.launch.py
interbotix_ros_xslocobots/interbotix_xslocobot_nav/maps/: interbotix_map.pgm  interbotix_map.yaml
interbotix_ros_xslocobots/interbotix_xslocobot_perception/: CMakeLists.txt  README.md  package.xml
interbotix_ros_xslocobots/interbotix_xslocobot_perception/config/: filter_params.yaml  static_transforms.yaml
interbotix_ros_xslocobots/interbotix_xslocobot_perception/launch/: xslocobot_perception.launch
interbotix_ros_xslocobots/interbotix_xslocobot_perception/scripts/: pick_place_armtag.py  pick_place_no_armtag.py
(+113 files in other folders)
