<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>interbotix_xslocobot_control</name>
  <version>0.0.0</version>
  <description>The interbotix_xslocobot_control package</description>
  <maintainer email="trsupport@trossenrobotics.com">Solomon Wiznitzer</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://wiki.ros.org/interbotix_xslocobot_control</url> -->
  <author email="solomon@trossenrobotics.com">Solomon Wiznitzer</author>

  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>interbotix_xs_sdk</build_depend>
  <build_depend>interbotix_xs_modules</build_depend>
  <build_depend>interbotix_xslocobot_descriptions</build_depend>
  <build_depend condition="$INTERBOTIX_XSLOCOBOT_BASE_TYPE == kobuki">kobuki_node</build_depend>
  <build_depend>realsense2_camera</build_depend>
  <build_depend>rgbd_launch</build_depend>
  <build_depend>rplidar_ros</build_depend>
  <build_export_depend>interbotix_xs_sdk</build_export_depend>
  <build_export_depend>interbotix_xs_modules</build_export_depend>
  <build_export_depend>interbotix_xslocobot_descriptions</build_export_depend>
  <build_export_depend condition="$INTERBOTIX_XSLOCOBOT_BASE_TYPE == kobuki">kobuki_node</build_export_depend>
  <build_export_depend>realsense2_camera</build_export_depend>
  <build_export_depend>rgbd_launch</build_export_depend>
  <build_export_depend>rplidar_ros</build_export_depend>
  <exec_depend>interbotix_xs_sdk</exec_depend>
  <exec_depend>interbotix_xs_modules</exec_depend>
  <exec_depend>interbotix_xslocobot_descriptions</exec_depend>
  <exec_depend condition="$INTERBOTIX_XSLOCOBOT_BASE_TYPE == kobuki">kobuki_node</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>rgbd_launch</exec_depend>
  <exec_depend>rplidar_ros</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
