<?xml version="1.0"?>
<package format="2">
  <name>interbotix_xslocobot_nav</name>
  <version>0.0.0</version>
  <description>The interbotix_xslocobot_nav package</description>
  <maintainer email="trsupport@trossenrobotics.com">Solomon Wiznitzer</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://wiki.ros.org/interbotix_xslocobot_nav</url> -->
  <author email="solomon@trossenrobotics.com">Solomon Wiznitzer</author>

  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>interbotix_xslocobot_control</build_depend>
  <build_depend>move_base</build_depend>
  <build_depend>rtabmap_ros</build_depend>
  <build_export_depend>interbotix_xslocobot_control</build_export_depend>
  <build_export_depend>move_base</build_export_depend>
  <build_export_depend>rtabmap_ros</build_export_depend>
  <exec_depend>interbotix_xslocobot_control</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>rtabmap_ros</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
