<?xml version="1.0"?>
<package format="3">
  <name>interbotix_xslocobot_landmark_nav</name>
  <version>0.0.0</version>
  <description>The interbotix_xslocobot_landmark_nav package</description>
  <maintainer email="trsupport@trossenrobotics.com">Luke Schmitt</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://wiki.ros.org/interbotix_xslocobot_landmark_nav</url> -->
  <author email="trsupport@trossenrobotics.com">Luke Schmitt</author>

  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>interbotix_xslocobot_control</build_depend>
  <build_depend>interbotix_xslocobot_nav</build_depend>
  <build_depend>interbotix_xslocobot_perception</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_export_depend>interbotix_xslocobot_control</build_export_depend>
  <build_export_depend>interbotix_xslocobot_nav</build_export_depend>
  <build_export_depend>interbotix_xslocobot_perception</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <exec_depend>interbotix_xslocobot_control</exec_depend>
  <exec_depend>interbotix_xslocobot_nav</exec_depend>
  <exec_depend>interbotix_xslocobot_perception</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-six</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-six</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
